--- a/Source/Tim/packages/repositories.config
+++ b/Source/Tim/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Tim.API\packages.config" />
+  <repository path="..\Tim.App.Core\packages.config" />
 </repositories>
