Initial commit of iOS project

--- a/Source/Tim/packages/repositories.config
+++ b/Source/Tim/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\Tim.API\packages.config" />
   <repository path="..\Tim.App.Core\packages.config" />
+  <repository path="..\Tim.App.UI.iOS\packages.config" />
   <repository path="..\Tim.App.UI.WinRT\packages.config" />
 </repositories>
