--- a/Source/Tim/Tim.App.UI.iOS/Tim.App.UI.iOS.csproj
+++ b/Source/Tim/Tim.App.UI.iOS/Tim.App.UI.iOS.csproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{4AFE9CD0-8A52-43BF-B100-C872FB09E919}</ProjectGuid>
     <ProjectTypeGuids>{6BC8ED88-2882-458C-8E55-DFD12B67127B};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
@@ -78,14 +76,22 @@
     <Compile Include="LinkerPleaseInclude.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Setup.cs" />
-    <Compile Include="Views\ThingsView.cs" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="packages.config" />
+    <Compile Include="Views\ThingsView.cs" />
+    <Compile Include="Views\ThingsView.designer.cs">
+      <DependentUpon>ThingsView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ThingsCollectionViewCell.cs" />
+    <Compile Include="Views\ThingsCollectionViewCell.designer.cs">
+      <DependentUpon>ThingsCollectionViewCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Converters\FileUriToImageConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tim.App.Core\Tim.App.Core.csproj">
-      <Project>{57aa592c-1228-415f-bb9c-a7364c4cc197}</Project>
+      <Project>{57AA592C-1228-415F-BB9C-A7364C4CC197}</Project>
       <Name>Tim.App.Core</Name>
     </ProjectReference>
   </ItemGroup>
@@ -120,4 +126,11 @@
     <Reference Include="monotouch" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
+  <ItemGroup>
+    <InterfaceDefinition Include="Views\ThingsView.xib" />
+    <InterfaceDefinition Include="Views\ThingsCollectionViewCell.xib" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Converters\" />
+  </ItemGroup>
 </Project>
