Add slideshow view for WinRT

--- a/Source/Tim/Tim.App.UI.WinRT/Tim.App.UI.WinRT.csproj
+++ b/Source/Tim/Tim.App.UI.WinRT/Tim.App.UI.WinRT.csproj
@@ -109,6 +109,9 @@
     <Compile Include="DebugTrace.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setup.cs" />
+    <Compile Include="Views\SlideshowView.xaml.cs">
+      <DependentUpon>SlideshowView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ThingsView.xaml.cs">
       <DependentUpon>ThingsView.xaml</DependentUpon>
     </Compile>
@@ -156,6 +159,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Views\SlideshowView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\ThingsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
