--- a/Source/Tim/Tim.App.Core/Tim.App.Core.csproj
+++ b/Source/Tim/Tim.App.Core/Tim.App.Core.csproj
@@ -39,11 +39,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Data\Cache.cs" />
     <Compile Include="Models\Thing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IThingsService.cs" />
     <Compile Include="Services\ThingsService.cs" />
+    <Compile Include="ViewModels\Design\SlideshowDesignableViewModel.cs" />
     <Compile Include="ViewModels\Design\ThingsDesignableViewModel.cs" />
+    <Compile Include="ViewModels\SlideshowViewModel.cs" />
     <Compile Include="ViewModels\ThingsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
